# risotto

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  renovate.json
.github/workflows/: cicd.yml  clean.yml  docker.yml
example/: risotto.yml
integration/: README.md  compose.yml
integration/config/bird/: bird30.conf  bird40.conf
integration/config/clickhouse/docker-entrypoint-initdb.d/: init.sql
integration/config/gobgp/: gobgp10.toml  gobgp20.toml
integration/config/risotto/: risotto.yml
integration/tests/: ipv4static.sh  ipv6static.sh
risotto/: Cargo.toml  build.rs
risotto-lib/: Cargo.toml
risotto-lib/src/: handler.rs  lib.rs  processor.rs  state.rs  statistics.rs  update.rs
risotto-lib/src/state_store/: memory.rs  store.rs
risotto-lib/tests/: processor.rs
risotto/schemas/: update.capnp
risotto/src/: api.rs  bmp.rs  config.rs  formatter.rs  main.rs  producer.rs  serializer.rs  state.rs  update_capnp.rs
risotto_lib/: Cargo.toml
risotto_lib/src/: state.rs  update.rs
src/: api.rs  bmp.rs  config.rs  db.rs  main.rs  pipeline.rs  producer.rs  router.rs  settings.rs  state.rs  update.rs
testbed/: README.md  compose.yml
testbed/bird/: Dockerfile
testbed/config/: bird_10.conf
testbed/config/bird/: bird_10.conf  bird_20.conf
testbed/config/clickhouse/docker-entrypoint-initdb.d/: init.sql
testbed/config/redpanda/: redpanda.yml
testbed/config/risotto/: risotto.yml
