[package]
name = "risotto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.95"
axum = "0.8.1"
bgpkit-parser = { version = "0.11.0", features = ["serde"] }
bytes = "1.9.0"
chrono = "0.4.39"
clap = { version = "4.5.23", features = ["derive"] }
clap-verbosity-flag = "3.0.2"
config = "0.15.4"
env_logger = "0.11.6"
log = "0.4.22"
metrics = "0.24.1"
metrics-exporter-prometheus = "0.16.0"
rand = "0.9.0"
rdkafka = "0.37.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
tokio = { version = "1.42.0", features = ["full"] }
tokio-graceful = "0.2.2"
