[package]
name = "risotto"
version = "0.1.0"
license = "MIT"
readme = "README.md"
description = "High performance BMP collector"
repository = "https://github.com/nxthdr/risotto"
homepage = "https://nxthdr.dev"
keywords = ["BGP", "BMP", "collector"]
edition = "2021"
exclude = [
    ".github/*",
    "integration/*",
    "logo/*",
    "renovate.json",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.95"
axum = "0.8.1"
bgpkit-parser = { version = "0.11.0", features = ["serde"] }
bytes = "1.9.0"
chrono = "0.4.39"
clap = { version = "4.5.23", features = ["derive"] }
clap-verbosity-flag = {version = "3.0.2", features = ["tracing"]}
config = "0.15.4"
metrics = "0.24.1"
metrics-exporter-prometheus = "0.16.0"
rand = "0.9.0"
rdkafka = "0.37.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
tokio = { version = "1.42.0", features = ["full"] }
tokio-graceful = "0.2.2"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
