[workspace]
resolver = "2"
members = ["risotto", "risotto-lib"]

[workspace.package]
version = "0.3.0"
license = "MIT"
readme = "README.md"
description = "High performance BMP collector"
repository = "https://github.com/nxthdr/risotto"
homepage = "https://nxthdr.dev"
keywords = ["BGP", "BMP", "collector"]
exclude = [
     ".github/*",
     "integration/*",
     "renovate.json",
 ]
