[package]
name = "risotto-lib"
edition = "2021"

version.workspace = true
license.workspace = true
readme.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
exclude.workspace = true

[dependencies]
anyhow = "1.0.95"
chrono = "0.4.39"
bgpkit-parser = { version = "0.11.0", features = ["serde"] }
bytes = "1.9.0"
rand = "0.9.0"
serde = { version = "1.0.217", features = ["derive"] }
tokio = "1.42.0"
tracing = "0.1.41"
