[package]
name = "risotto-lib"
edition = "2021"

version.workspace = true
license.workspace = true
readme.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
exclude.workspace = true

[dependencies]
anyhow = "1.0.95"
bgpkit-parser = { version = "0.15.0", features = ["serde"] }
bytes = "1.9.0"
chrono = "0.4.39"
metrics = "0.24.2"
rand = "0.10.0"
serde = { version = "1.0.217", features = ["derive"] }
tokio = { version = "1.42.0", features = ["macros"] }
tracing = "0.1.41"
