[package]
name = "risotto"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.95"
axum = "0.8.1"
bytes = "1.9.0"
clap = { version = "4.5.23", features = ["derive"] }
clap-verbosity-flag = {version = "3.0.2", features = ["tracing"]}
config = "0.15.4"
metrics = "0.24.1"
metrics-exporter-prometheus = "0.16.0"
risotto-lib = { path = "../risotto-lib" }
rdkafka = "0.37.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
tokio = { version = "1.42.0", features = ["full"] }
tokio-graceful = "0.2.2"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
