[package]
name = "risotto"
edition = "2021"

version.workspace = true
license.workspace = true
readme.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
exclude.workspace = true

[dependencies]
anyhow = "1.0.95"
axum = "0.8.1"
bytes = "1.9.0"
capnp = "0.21.0"
clap = { version = "4.5.23", features = ["derive"] }
clap-verbosity-flag = {version = "3.0.2", features = ["tracing"]}
config = "0.15.4"
metrics = "0.24.1"
metrics-exporter-prometheus = "0.17.0"
rdkafka = "0.37.0"
risotto-lib = { path = "../risotto-lib", version = "0.2.0" }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
tokio = { version = "1.42.0", features = ["full"] }
tokio-graceful = "0.2.2"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[build-dependencies]
capnpc = "0.21.0"
