[package]
name = "risotto"
edition = "2021"

version.workspace = true
license.workspace = true
readme.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
exclude.workspace = true

[dependencies]
anyhow = "1.0.95"
postcard = { version = "1.0", features = ["alloc"] }
bytes = "1.9.0"
capnp = "0.24.0"
chrono = "0.4.40"
clap = { version = "4.5.23", features = ["derive"] }
clap-verbosity-flag = {version = "3.0.2", features = ["tracing"]}
futures = "0.3.31"
metrics = "0.24.1"
metrics-exporter-prometheus = "0.18.0"
rdkafka = "0.38.0"
risotto-lib = { path = "../risotto-lib", version = "0.6.0" }
serde = { version = "1.0.217", features = ["derive"] }
tokio = { version = "1.42.0", features = ["full"] }
tokio-graceful = "0.2.2"
tracing = "0.1.41"
tracing-subscriber = {version= "0.3.19", features = ["fmt", "env-filter"]}

[build-dependencies]
capnpc = "0.24.0"
