[package]
name = "risotto_lib"
version = "0.1.0"
edition = "2021"

[dependencies]
bgpkit-parser = { version = "0.10.11", features = ["serde"] }
bytes = "1.9.0"
chrono = "0.4.39"
log = "0.4.22"
rand = "0.8.5"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
tokio = { version = "1.42.0"}
